Auth error fixed